Fixing whitespaces on the edges on mobile portrait mode

--- a/client/src/assets/images.css
+++ b/client/src/assets/images.css
@@ -3,8 +3,6 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 50%;
-  overflow-x: hidden !important;
-
 }
 
 body, html {
